<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_card_quiz"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="162dp"
    app:cardBackgroundColor="@color/colorPeach">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_in_cv_card_quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp">

        <ImageView
            android:id="@+id/bg_quiz"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/img"
            android:scaleType="matrix"
            android:src="@drawable/bg4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txt_quiz_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/nolpertiga"
            android:textColor="@color/colorMerah"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_title_quiz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/portal1"
            android:textColor="@color/colorPeach"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_quiz" />

        <TextView
            android:id="@+id/txt_desc_quiz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="3"
            android:text="@string/desp1"
            android:textColor="@color/colorTosca"
            app:layout_constraintEnd_toEndOf="@+id/txt_title_quiz"
            app:layout_constraintStart_toStartOf="@+id/txt_title_quiz"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_quiz" />

        <TextView
            android:id="@+id/txt_quiz_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/misibelumtuntas"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_desc_quiz" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>